tests/conditional/conditional.exp
Error --------------------------------------------------------------------------------------------- conditional.js:23:24

Cannot return `x != null ? x : x != null` because number [1] is incompatible with string [2]. [incompatible-return]

   conditional.js:23:24
   23|   return (x != null) ? x : (x != null);
                              ^

References:
   conditional.js:22:11
   22|   var x: ?number = null;
                 ^^^^^^ [1]
   conditional.js:20:15
   20| function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- conditional.js:23:29

Cannot return `x != null ? x : x != null` because boolean [1] is incompatible with string [2]. [incompatible-return]

   conditional.js:23:29
   23|   return (x != null) ? x : (x != null);
                                   ^^^^^^^^^ [1]

References:
   conditional.js:20:15
   20| function d(): string { // expected `: number | boolean`
                     ^^^^^^ [2]



Found 2 errors
